# applied-computer-vision

./: CMakeLists.txt  Notes.md  hardwareInterface.h  ourMain.cpp
